--- a/EasyPayTests/packages.config
+++ b/EasyPayTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="73.0.3683.68" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="74.0.3729.6" targetFramework="net461" />
 </packages>
