--- a/EasyPayLibrary/EasyPayLibrary.csproj
+++ b/EasyPayLibrary/EasyPayLibrary.csproj
@@ -56,26 +56,37 @@
     <Compile Include="Pages\BasePageObject.cs" />
     <Compile Include="Pages\BaseSidebar.cs" />
     <Compile Include="Pages\GeneralPage.cs" />
-    <Compile Include="Pages\Header.cs" />
-    <Compile Include="Pages\HeaderPOM.cs" />
+    <Compile Include="Pages\Common\Header.cs" />
     <Compile Include="Pages\HomePage.cs" />
-    <Compile Include="Pages\LoginPage.cs" />
-    <Compile Include="Pages\ProfilePage.cs" />
-    <Compile Include="Pages\UserListRatingItem.cs" />
-    <Compile Include="Pages\WelcomePage.cs" />
+    <Compile Include="Pages\Manager\HomePageManager.cs" />
+    <Compile Include="Pages\Manager\InspectorsListPage.cs" />
+    <Compile Include="Pages\Manager\ManagerSidebar.cs" />
+    <Compile Include="Pages\User\HomePageUser.cs" />
+    <Compile Include="Pages\IBasePageObject.cs" />
+    <Compile Include="Pages\Common\LoginPage.cs" />
+    <Compile Include="Pages\User\PaymentHistory\PaymentHistory.cs" />
+    <Compile Include="Pages\User\PaymentHistory\PaymentHistoryTable.cs" />
+    <Compile Include="Pages\User\PaymentHistory\PaymentHistoryTableRows.cs" />
+    <Compile Include="Pages\User\PaymentPage\PaymentFrame.cs" />
+    <Compile Include="Pages\User\PaymentPage\PaymentPage.cs" />
+    <Compile Include="Pages\User\PaymentPage\SelectPaymentSumPage.cs" />
+    <Compile Include="Pages\User\PaymentPage\SetValuePage.cs" />
+    <Compile Include="Pages\Common\ProfilePage.cs" />
+    <Compile Include="Pages\User\UserSidebar.cs" />
+    <Compile Include="Pages\User\PaymentPage\UtilityDetailsPage.cs" />
+    <Compile Include="Pages\Common\WelcomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebelementWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets')" />
+  <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.74.0.3729.6\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.74.0.3729.6\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets'))" />
+    <Error Condition="!Exists('..\packages\Selenium.WebDriver.ChromeDriver.74.0.3729.6\build\Selenium.WebDriver.ChromeDriver.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Selenium.WebDriver.ChromeDriver.74.0.3729.6\build\Selenium.WebDriver.ChromeDriver.targets'))" />
   </Target>
 </Project>
