--- a/EasyPayLibrary/EasyPayLibrary.csproj
+++ b/EasyPayLibrary/EasyPayLibrary.csproj
@@ -51,37 +51,38 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DriverFactory.cs" />
-    <Compile Include="DriverWrapper.cs" />
-    <Compile Include="Pages\Base\BasePageObject.cs" />
-    <Compile Include="Pages\Base\BaseSidebar.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\Gmail\MailPage.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\Gmail\GmailEmailPage.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\Gmail\GmailPage.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\Gmail\GmailPasswordPage.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\RedirectModalWindow.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\RegisterPage.cs" />
-    <Compile Include="Pages\Base\GeneralPage.cs" />
-    <Compile Include="Pages\Common\Header.cs" />
-    <Compile Include="Pages\Manager\HomePageManager.cs" />
-    <Compile Include="Pages\Manager\InspectorsListPage.cs" />
-    <Compile Include="Pages\Manager\ManagerSidebar.cs" />
-    <Compile Include="Pages\User\HomePageUser.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\LoginPage.cs" />
-    <Compile Include="Pages\User\PaymentHistory\PaymentHistory.cs" />
-    <Compile Include="Pages\User\PaymentHistory\PaymentHistoryTable.cs" />
-    <Compile Include="Pages\User\PaymentHistory\PaymentHistoryTableRows.cs" />
-    <Compile Include="Pages\User\PaymentPage\PaymentFrame.cs" />
-    <Compile Include="Pages\User\PaymentPage\PaymentPage.cs" />
-    <Compile Include="Pages\User\PaymentPage\SelectPaymentSumPage.cs" />
-    <Compile Include="Pages\User\PaymentPage\SetValuePage.cs" />
-    <Compile Include="Pages\Common\ProfilePage.cs" />
-    <Compile Include="Pages\User\UserSidebar.cs" />
-    <Compile Include="Pages\User\PaymentPage\UtilityDetailsPage.cs" />
-    <Compile Include="Pages\UnauthorizedUserPages\WelcomePage.cs" />
+    <Compile Include="Wrappers\DriverFactory.cs" />
+    <Compile Include="Wrappers\DriverWrapper.cs" />
+    <Compile Include="BasePageObject.cs" />
+    <Compile Include="BaseSidebar.cs" />
+    <Compile Include="LanguageChanger.cs" />
+    <Compile Include="Login\Gmail\MailPage.cs" />
+    <Compile Include="Login\Gmail\GmailEmailPage.cs" />
+    <Compile Include="Login\Gmail\GmailPage.cs" />
+    <Compile Include="Login\Gmail\GmailPasswordPage.cs" />
+    <Compile Include="Login\RedirectModalWindow.cs" />
+    <Compile Include="Login\RegisterPage.cs" />
+    <Compile Include="GeneralPage.cs" />
+    <Compile Include="Header\Header.cs" />
+    <Compile Include="HomePages\HomePageManager.cs" />
+    <Compile Include="ManagerSidebar\InspectorsListPage.cs" />
+    <Compile Include="ManagerSidebar\ManagerSidebar.cs" />
+    <Compile Include="HomePages\HomePageUser.cs" />
+    <Compile Include="Login\LoginPage.cs" />
+    <Compile Include="UserSidebar\PaymentHistory\PaymentHistory.cs" />
+    <Compile Include="UserSidebar\PaymentHistory\PaymentHistoryTable.cs" />
+    <Compile Include="UserSidebar\PaymentHistory\PaymentHistoryTableRows.cs" />
+    <Compile Include="UserSidebar\PaymentPage\PaymentFrame.cs" />
+    <Compile Include="UserSidebar\PaymentPage\PaymentPage.cs" />
+    <Compile Include="UserSidebar\PaymentPage\SelectPaymentSumPage.cs" />
+    <Compile Include="UserSidebar\PaymentPage\SetValuePage.cs" />
+    <Compile Include="Header\ProfilePage.cs" />
+    <Compile Include="UserSidebar\UserSidebar.cs" />
+    <Compile Include="UserSidebar\PaymentPage\UtilityDetailsPage.cs" />
+    <Compile Include="Login\WelcomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectElementWrapper.cs" />
-    <Compile Include="WebelementWrapper.cs" />
+    <Compile Include="Wrappers\SelectElementWrapper.cs" />
+    <Compile Include="Wrappers\WebelementWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
