--- a/EasyPayLibrary/EasyPayLibrary.csproj
+++ b/EasyPayLibrary/EasyPayLibrary.csproj
@@ -51,28 +51,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DriverFactory.cs" />
-    <Compile Include="DriverWrapper.cs" />
-    <Compile Include="Pages\AddScheduleItemPage.cs" />
-    <Compile Include="Pages\BasePageObject.cs" />
-    <Compile Include="Pages\BaseSidebar.cs" />
-    <Compile Include="Pages\GeneralPage.cs" />
-    <Compile Include="Pages\Header.cs" />
-    <Compile Include="Pages\HistoryPage.cs" />
-    <Compile Include="Pages\HomePage.cs" />
-    <Compile Include="Pages\InspectorsListPage.cs" />
-    <Compile Include="Pages\LoginPage.cs" />
-    <Compile Include="Pages\ManagerSidebar.cs" />
-    <Compile Include="Pages\SchedulePage.cs" />
-    <Compile Include="Pages\StatisticsPage.cs" />
-    <Compile Include="Pages\UtilityPricePage.cs" />
-    <Compile Include="Pages\WelcomePage.cs" />
+    <Compile Include="Wrappers\DriverFactory.cs" />
+    <Compile Include="Wrappers\DriverWrapper.cs" />
+    <Compile Include="ManagerSidebar\AddScheduleItemPage.cs" />
+    <Compile Include="BasePageObject.cs" />
+    <Compile Include="BaseSidebar.cs" />
+    <Compile Include="GeneralPage.cs" />
+    <Compile Include="Header\Header.cs" />
+    <Compile Include="ManagerSidebar\HistoryPage.cs" />
+    <Compile Include="HomePages\HomePage.cs" />
+    <Compile Include="ManagerSidebar\InspectorsListPage.cs" />
+    <Compile Include="Login\LoginPage.cs" />
+    <Compile Include="ManagerSidebar\ManagerSidebar.cs" />
+    <Compile Include="ManagerSidebar\SchedulePage.cs" />
+    <Compile Include="ManagerSidebar\StatisticsPage.cs" />
+    <Compile Include="ManagerSidebar\UtilityPricePage.cs" />
+    <Compile Include="Login\WelcomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebelementWrapper.cs" />
+    <Compile Include="Wrappers\WebelementWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('..\packages\Selenium.WebDriver.ChromeDriver.73.0.3683.68\build\Selenium.WebDriver.ChromeDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
