--- a/EasyPayTests/App.config
+++ b/EasyPayTests/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="URL" value="http://localhost:8080/" />
-    <add key="browser" value="Chrome" />
+    <add key="URL" value="http://localhost:8080/"/>
+    <add key="browser" value="Chrome"/>
     <!-- USse Chrome, Firefox or IE-->
     <!--add key="browser" value="Firefox"/-->
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
