--- a/EasyPayLibrary/EasyPayLibrary.csproj
+++ b/EasyPayLibrary/EasyPayLibrary.csproj
@@ -59,26 +59,30 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HomePages\HomePageInspector.cs" />
+    <Compile Include="InspectorSidebar\CheckCountersPage.cs" />
+    <Compile Include="InspectorSidebar\ClientsPage.cs" />
+    <Compile Include="InspectorSidebar\RateClientsPage.cs" />
+    <Compile Include="InspectorSidebar\SchedulePage.cs" />
+    <Compile Include="InspectorSidebar\SetCurrentValue.cs" />
+    <Compile Include="InspectorSidebar\SidebarInspector.cs" />
+    <Compile Include="InspectorSidebar\UtilityPage.cs" />
+    <Compile Include="LanguageChanger.cs" />
+    <Compile Include="Login\LoginPage.cs" />
+    <Compile Include="Login\WelcomePage.cs" />
+    <Compile Include="Wrappers\ActionsWrapper.cs" />
     <Compile Include="Wrappers\DriverFactory.cs" />
     <Compile Include="Wrappers\DriverWrapper.cs" />
     <Compile Include="SidebarAdmin\SidebarAdmin.cs" />
-    <Compile Include="BasePageObject.cs" />
     <Compile Include="SidebarBase.cs" />
-    <Compile Include="GeneralPage.cs" />
     <Compile Include="Header\Header.cs" />
     <Compile Include="HomePages\HomePageAdmin.cs" />
-    <Compile Include="Login\LoginPage.cs" />
-    <Compile Include="Header\ProfilePage.cs" />
     <Compile Include="SidebarAdmin\RegisterUser.cs" />
     <Compile Include="SidebarAdmin\Users.cs" />
     <Compile Include="SidebarAdmin\Utilities.cs" />
-    <Compile Include="Login\WelcomePage.cs" />
-    <Compile Include="LanguageChanger.cs" />
     <Compile Include="HomePages\UsersHomePage.cs" />
     <Compile Include="SidebarUser\SidebarUsers.cs" />
     <Compile Include="BasePageObject.cs" />
-    <Compile Include="BaseSidebar.cs" />
-    <Compile Include="LanguageChanger.cs" />
     <Compile Include="Login\Gmail\MailPage.cs" />
     <Compile Include="Login\Gmail\GmailEmailPage.cs" />
     <Compile Include="Login\Gmail\GmailPage.cs" />
@@ -86,12 +90,9 @@
     <Compile Include="Login\RedirectModalWindow.cs" />
     <Compile Include="Login\RegisterPage.cs" />
     <Compile Include="GeneralPage.cs" />
-    <Compile Include="Header\Header.cs" />
     <Compile Include="HomePages\HomePageManager.cs" />
     <Compile Include="ManagerSidebar\InspectorsListPage.cs" />
     <Compile Include="ManagerSidebar\ManagerSidebar.cs" />
-    <Compile Include="HomePages\HomePageUser.cs" />
-    <Compile Include="Login\LoginPage.cs" />
     <Compile Include="UserSidebar\PaymentHistory\PaymentHistory.cs" />
     <Compile Include="UserSidebar\PaymentHistory\PaymentHistoryTable.cs" />
     <Compile Include="UserSidebar\PaymentHistory\PaymentHistoryTableRows.cs" />
@@ -100,11 +101,8 @@
     <Compile Include="UserSidebar\PaymentPage\SelectPaymentSumPage.cs" />
     <Compile Include="UserSidebar\PaymentPage\SetValuePage.cs" />
     <Compile Include="Header\ProfilePage.cs" />
-    <Compile Include="UserSidebar\UserSidebar.cs" />
     <Compile Include="UserSidebar\PaymentPage\UtilityDetailsPage.cs" />
-    <Compile Include="Login\WelcomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Wrappers\WebelementWrapper.cs" />
     <Compile Include="Wrappers\SelectElementWrapper.cs" />
     <Compile Include="Wrappers\WebelementWrapper.cs" />
   </ItemGroup>
