--- a/EasyPayTests/EasyPayTests.csproj
+++ b/EasyPayTests/EasyPayTests.csproj
@@ -62,6 +62,8 @@
     <Compile Include="AdminTestMax.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="InspectorTestNazar.cs" />
+    <Compile Include="ManagerTestsMax.cs" />
+    <Compile Include="ManagerTestsTania.cs" />
     <Compile Include="Translations\TranslationProvider.cs" />
     <Compile Include="Translations\TranslationValues.cs" />
     <Compile Include="MikeTests.cs" />
