Paralleled, improved BaseTest

--- a/EasyPayTests/packages.config
+++ b/EasyPayTests/packages.config
@@ -6,4 +6,5 @@
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="74.0.3729.6" targetFramework="net461" />
+  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.24.0" targetFramework="net461" />
 </packages>
