--- a/EasyPayTests/EasyPayTests.csproj
+++ b/EasyPayTests/EasyPayTests.csproj
@@ -74,6 +74,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="RunAllTestsByBrowser.bat" />
+    <None Include="RunCriticalFirefox.bat" />
     <None Include="Translations\dictionaries\dict.en.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
