Added DB manager

--- a/EasyPayTests/App.config
+++ b/EasyPayTests/App.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="URL" value="http://localhost:8080/" />
     <add key="browser" value="Chrome" />
-    <!-- USse Chrome, Firefox or IE-->
     <!--add key="browser" value="Firefox"/-->
+    <add key="Server" value="127.0.0.1"/>
+    <add key="Port" value="5432"/>
+    <add key="Username" value="postgres"/>
+    <add key="Password" value="postgres"/>
+    <add key="Database" value="easypay_db"/>
   </appSettings>
 </configuration>
