--- a/EasyPayTests/packages.config
+++ b/EasyPayTests/packages.config
@@ -6,7 +6,7 @@
   <package id="MongoDB.Driver" version="2.7.2" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
-  <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
@@ -14,6 +14,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="74.0.3729.6" targetFramework="net461" />
   <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.24.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.MicrosoftWebDriver" version="10.0.17134" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
