--- a/SeleniumExtentReport/packages.config
+++ b/SeleniumExtentReport/packages.config
@@ -7,8 +7,9 @@
   <package id="MongoDB.Driver" version="2.7.2" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.7.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.MicrosoftWebDriver" version="10.0.17134" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
