Some Layzi moves

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 EasyPayTests/Test_Execution_Reports
 EasyPayTests/SimpleApiTests/SimpleAPi
 /SimpleApiTests/SimpleAPi
+/EasyPayTests/SimpleAPi
