--- a/EasyPayTests/App.config
+++ b/EasyPayTests/App.config
@@ -9,6 +9,7 @@
     <add key="Username" value="postgres" />
     <add key="Password" value="postgres" />
     <add key="Database" value="easypay_db" />
+    <add key="ApiUrl" value="http://localhost:5000" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
