--- a/HttpLibrary/HttpLibrary.csproj
+++ b/HttpLibrary/HttpLibrary.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.6.9.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.6.9\lib\net452\RestSharp.dll</HintPath>
     </Reference>
@@ -46,12 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientFactory.cs" />
-    <Compile Include="ClientWrapper.cs" />
+    <Compile Include="Api.cs" />
+    <Compile Include="Wrappers\ClientFactory.cs" />
+    <Compile Include="Wrappers\ClientWrapper.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestWrapper.cs" />
-    <Compile Include="ResponseWrapper.cs" />
+    <Compile Include="Wrappers\RequestWrapper.cs" />
+    <Compile Include="Wrappers\ResponseWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
