--- a/SimpleApiTests/SimpleApiTests.csproj
+++ b/SimpleApiTests/SimpleApiTests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiPostRate.cs" />
     <Compile Include="BaseTest.cs" />
     <Compile Include="ApiPosts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
